# MCP-Detection

./: MICRYSCOPE _detection.py  README.md  crypto_misuse_detection.py
crypto_identification/: crypto_identification.py
csharp_ast_analyzer/: Program.cs  csharp_ast_analyzer.csproj
go_ast_analyzer/: go.mod  go.sum  go_ast_analyzer.go
java_ast_analyzer/: pom.xml
js_ast_analyzer/: js_ast_analyzer.js  package-lock.json  package.json
php_ast_analyzer/: php_ast_analyzer.php
python_ast_analyzer/: python_ast_analyzer.py
ruby_ast_analyzer/: ruby_ast_analyzer.rb
rust_ast_analyzer/: Cargo.toml
rust_ast_analyzer/src/: main.rs
swift_ast_analyzer/: Package.resolved  Package.swift
swift_ast_analyzer/Sources/swift_ast_analyzer/: main.swift
swift_ast_analyzer/output/: awesome.json  cursor.json  glama.json
swift_ast_analyzer/tool/: go.mod  xlsx_append.go
test/Crypto/: jest.config.js  smithery.yaml
test/Crypto/src/service/: digest.ts
test/Dbx/: dbxmcp.sh  package.json  smithery.yaml
test/Dbx/src/: auth.ts  dbx-server.ts  exchange-code.ts  index.ts  security-utils.ts  setup.ts  test-mcp.ts  types.ts
test/Excel_Master/: Excel_Master.cursor.json
test/kiss-kedaya_crypto_mcp/: requirements.txt
test/mcpmarket/Javascript/Crypto/: Dockerfile  package.json  readme.md
test/mcpmarket/Javascript/Crypto/src/: index.ts
test/mcpmarket/Javascript/Dbx/: package-lock.json
test/mcpmarket/Javascript/Dbx/src/: config.js  dbx-api.ts  generate-auth-url.ts  (+3 more)
test/smithery/python/kiss-kedaya_crypto_mcp/: README.md
test/smithery/python/wwwzhouhui_dify-for-dsl/: README.md
(+13 files in other folders)
